protocols/tests/identities/identity_d2/two_fork_err.prot
struct Identity {
  in a: u32,
  out s: u32,
}

prot two_fork_err<DUT: Identity>(a: u32, s: u32) {
  // guaranteed failure due to two forks during execution
  DUT.a := a;
  step();
  fork();
  DUT.a := a;
  step();
  fork();
  assert_eq(s, DUT.s);
  step();
}
